(fix): Avoid soft wrapping on thumb counters parentheses

--- a/app/src/components/buttons/buttons.scss
+++ b/app/src/components/buttons/buttons.scss
@@ -103,6 +103,7 @@ counter{
   // font-weight:bold;
   vertical-align: middle;
   padding:0;
+  white-space: nowrap;
 }
 counter:after{
    content:' )';
